# Free-Scavenger-Miner

./: BUILD_GUIDE.md  README.md
scavenger-miner-code/: Cargo.toml  wallets.txt.example
scavenger-miner-code/src/: main.rs
